--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,15 +16,19 @@ services:
   # Servicio de la Aplicación Spring Boot
   app:
     build: .
+
     container_name: minimal-prod-app
     ports:
       - "8080:8080"
     depends_on:
       - db
     environment:
-      # Sobrescribimos la URL de la datasource para que apunte al servicio 'db'
-      # dentro de la red de Docker, no a localhost.
+      - JWT_SECRET=ac9c8a7b2dc5c9bdc3a7fed6888d3c3f
+      - JWT_EXPIRATION_MS=3600000
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/minimalProd
+      - SPRING_DATASOURCE_USERNAME=minimal_prod_user
+      - SPRING_DATASOURCE_PASSWORD=minimal_prod_pass
+
 
 volumes:
   postgres_data:
