--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=Minimal Prod Backend
+jwt.secret=ac9c8a7b2dc5c9bdc3a7fed6888d3c3f
+jwt.expiration-ms=3600000
+spring.datasource.url=jdbc:postgresql://db:5432/minimalProd
+spring.datasource.username=minimal_prod_user
+spring.datasource.password=minimal_prod_pass
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
