--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,12 @@ spring.datasource.password=minimal_prod_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+spring.jpa.properties.hibernate.format_sql=true
+
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework.orm.jpa=DEBUG
+logging.level.org.hibernate.engine=DEBUG
+logging.level.com.example.minimal_prod_backend=INFO
+logging.level.org.springframework.security=DEBUG
