--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,8 @@ dependencies {
 	testImplementation 'org.springframework.security:spring-security-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testImplementation 'io.cucumber:cucumber-java:7.23.0'
-    testImplementation 'io.cucumber:cucumber-junit:7.23.0'
+    testImplementation 'io.cucumber:cucumber-junit-platform-engine:7.14.0'
+    testImplementation 'org.junit.platform:junit-platform-suite-api:1.10.0'
 	implementation 'io.cucumber:cucumber-spring:7.27.2'
     implementation "io.jsonwebtoken:jjwt-api:0.12.5"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.12.5"
