--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,3 +1,5 @@
+spring.jpa.database=h2
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.flyway.enabled=false
 spring.datasource.url=jdbc:h2:mem:testdb
