--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,8 @@ logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.hibernate.engine=DEBUG
 logging.level.com.example.minimal_prod_backend=INFO
 logging.level.org.springframework.security=DEBUG
+spring.jpa.properties.javax.persistence.validation.mode=auto
+spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.query.plan_cache_concurrency_level=16
+spring.jpa.properties.hibernate.query.plan_cache_max_size=64
+spring.jpa.properties.hibernate.query.plan_parameter_metadata_max_size=128
