--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.query.plan_cache_concurrency_level=16
 spring.jpa.properties.hibernate.query.plan_cache_max_size=64
 spring.jpa.properties.hibernate.query.plan_parameter_metadata_max_size=128
+logging.level.com.example.minimal_prod_backend.service.impl.OrdenTrabajoServiceImpl=DEBUG
