--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,9 @@ spring.jpa.properties.hibernate.query.plan_cache_concurrency_level=16
 spring.jpa.properties.hibernate.query.plan_cache_max_size=64
 spring.jpa.properties.hibernate.query.plan_parameter_metadata_max_size=128
 logging.level.com.example.minimal_prod_backend.service.impl.OrdenTrabajoServiceImpl=DEBUG
+# MinIO Configuration (S3 Local)
+cloudflare.r2.access-key-id=admin
+cloudflare.r2.secret-access-key=password123
+cloudflare.r2.region=us-east-1
+cloudflare.r2.endpoint=http://localhost:9000
+cloudflare.r2.bucket=demos
