--- a/application.yml
+++ b/application.yml
@@ -26,3 +26,9 @@ spring:
 flyway:
   enabled: true
   locations: classpath:db/migration
+cloudflare:
+  r2:
+    endpoint: http://localhost:9000
+    access-key: admin
+    secret-key: password123
+    bucket: demos
