fix extension graphql

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,27 +1,78 @@
+# --- General ---
 spring.application.name=Minimal Prod Backend
+spring.profiles.active=debug
+
+# --- JWT ---
 jwt.secret=ac9c8a7b2dc5c9bdc3a7fed6888d3c3f
 jwt.expiration-ms=3600000
-spring.datasource.url=jdbc:postgresql://db:5432/minimalProd
+
+# --- Database ---
+# OJO: usa "localhost" si estás corriendo sin Docker
+spring.datasource.url=jdbc:postgresql://localhost:5432/minimalProd
 spring.datasource.username=minimal_prod_user
 spring.datasource.password=minimal_prod_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# --- JPA / Hibernate ---
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.generate-ddl=true
+spring.jpa.open-in-view=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.javax.persistence.validation.mode=auto
+
+# --- Logging: Nivel máximo de detalle ---
+logging.level.root=DEBUG
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 logging.level.org.springframework.orm.jpa=DEBUG
 logging.level.org.hibernate.engine=DEBUG
-logging.level.com.example.minimal_prod_backend=INFO
-logging.level.org.springframework.security=DEBUG
-spring.jpa.properties.javax.persistence.validation.mode=auto
-spring.jpa.generate-ddl=true
-spring.jpa.properties.hibernate.query.plan_cache_concurrency_level=16
-spring.jpa.properties.hibernate.query.plan_cache_max_size=64
-spring.jpa.properties.hibernate.query.plan_parameter_metadata_max_size=128
-logging.level.com.example.minimal_prod_backend.service.impl.OrdenTrabajoServiceImpl=DEBUG
-# MinIO Configuration (S3 Local)
+logging.level.org.springframework.transaction=TRACE
+logging.level.org.springframework.security=TRACE
+logging.level.org.springframework.graphql=TRACE
+logging.level.org.springframework.web=DEBUG
+logging.level.com.zaxxer.hikari=DEBUG
+logging.level.com.example.minimal_prod_backend=DEBUG
+
+# Si tienes GraphQL Java Tools u otra integración:
+logging.level.graphql=TRACE
+logging.level.io.leangen.graphql=TRACE
+logging.level.org.dataloader=TRACE
+logging.level.com.graphql-java=DEBUG
+logging.level.graphql.kickstart=DEBUG
+logging.level.org.springframework.web.servlet=TRACE
+logging.level.org.springframework.web.filter=TRACE
+
+# --- Flyway ---
+spring.flyway.enabled=true
+spring.flyway.validate-on-migrate=true
+spring.flyway.clean-disabled=false
+logging.level.org.flywaydb=DEBUG
+
+# --- HikariCP ---
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.minimum-idle=2
+spring.datasource.hikari.idle-timeout=10000
+spring.datasource.hikari.connection-timeout=15000
+spring.datasource.hikari.max-lifetime=60000
+
+# --- DevTools ---
+spring.devtools.restart.enabled=true
+spring.devtools.livereload.enabled=false
+
+# --- Startup y depuración del contexto ---
+spring.main.banner-mode=console
+spring.main.lazy-initialization=false
+spring.output.ansi.enabled=always
+
+# --- SQL Plan y ejecución ---
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.session.events.log=true
+
+# --- MinIO / R2 ---
 cloudflare.r2.access-key-id=admin
 cloudflare.r2.secret-access-key=password123
 cloudflare.r2.region=us-east-1
