--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,7 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.github.librepdf:openpdf:3.0.0'
     implementation 'software.amazon.awssdk:s3:2.20.0'
     implementation 'software.amazon.awssdk:auth:2.20.0'
     implementation 'io.hypersistence:hypersistence-utils-hibernate-63:3.11.0'
