--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,6 @@ jwt.secret=ac9c8a7b2dc5c9bdc3a7fed6888d3c3f
 jwt.expiration-ms=3600000
 
 # --- Database ---
-# OJO: usa "localhost" si estás corriendo sin Docker
 spring.datasource.url=jdbc:postgresql://localhost:5432/minimalProd
 spring.datasource.username=minimal_prod_user
 spring.datasource.password=minimal_prod_pass
@@ -20,37 +19,45 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.generate-ddl=true
 spring.jpa.open-in-view=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.properties.javax.persistence.validation.mode=auto
 
-# --- Logging: Nivel máximo de detalle ---
+# --- Logging: NIVELES REDUCIDOS Y ENFOCADOS ---
 logging.level.root=DEBUG
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
+
+# Solo SQL y parámetros (para ver las consultas)
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+
+# Transacciones (para ver rollbacks)
+logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa=DEBUG
-logging.level.org.hibernate.engine=DEBUG
-logging.level.org.springframework.transaction=TRACE
-logging.level.org.springframework.security=TRACE
-logging.level.org.springframework.graphql=TRACE
-logging.level.org.springframework.web=DEBUG
-logging.level.com.zaxxer.hikari=DEBUG
+
+# Tu aplicación - máximo detalle aquí
 logging.level.com.example.minimal_prod_backend=DEBUG
 
-# Si tienes GraphQL Java Tools u otra integración:
-logging.level.graphql=TRACE
-logging.level.io.leangen.graphql=TRACE
-logging.level.org.dataloader=TRACE
-logging.level.com.graphql-java=DEBUG
-logging.level.graphql.kickstart=DEBUG
-logging.level.org.springframework.web.servlet=TRACE
-logging.level.org.springframework.web.filter=TRACE
+# Seguridad - solo errores
+logging.level.org.springframework.security=WARN
+
+# GraphQL - solo errores
+logging.level.org.springframework.graphql=WARN
+
+# Web - solo errores
+logging.level.org.springframework.web=WARN
+
+# Connection pool - solo importante
+logging.level.com.zaxxer.hikari=INFO
+
+# --- Logging específico para debuggear el error del ID nulo ---
+logging.level.com.example.minimal_prod_backend.service.impl.IncidenciaBuilderService=TRACE
+logging.level.com.example.minimal_prod_backend.service.impl.IncidenciaCompletaService=TRACE
+logging.level.com.example.minimal_prod_backend.controller.IncidenciaCompletaController=TRACE
 
 # --- Flyway ---
 spring.flyway.enabled=true
 spring.flyway.validate-on-migrate=true
 spring.flyway.clean-disabled=false
-logging.level.org.flywaydb=DEBUG
+logging.level.org.flywaydb=INFO
 
 # --- HikariCP ---
 spring.datasource.hikari.maximum-pool-size=5
@@ -63,18 +70,16 @@ spring.datasource.hikari.max-lifetime=60000
 spring.devtools.restart.enabled=true
 spring.devtools.livereload.enabled=false
 
-# --- Startup y depuración del contexto ---
+# --- Multipart ---
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=20MB
+
+# --- Console output limpio ---
 spring.main.banner-mode=console
-spring.main.lazy-initialization=false
 spring.output.ansi.enabled=always
 
-# --- SQL Plan y ejecución ---
-spring.jpa.properties.hibernate.generate_statistics=true
-spring.jpa.properties.hibernate.session.events.log=true
+# Patrón de log más limpio
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{36} - %msg%n
+# Logs específicos para debug
 
-# --- MinIO / R2 ---
-cloudflare.r2.access-key-id=admin
-cloudflare.r2.secret-access-key=password123
-cloudflare.r2.region=us-east-1
-cloudflare.r2.endpoint=http://localhost:9000
-cloudflare.r2.bucket=demos
+# Para ver las consultas de las entidades relacionadas
