--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,8 @@ repositories {
 }
 
 dependencies {
+    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
+
     implementation 'com.github.librepdf:openpdf:3.0.0'
     implementation 'software.amazon.awssdk:s3:2.20.0'
     implementation 'software.amazon.awssdk:auth:2.20.0'
