Update deployment source to specific JAR file

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,8 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "build/libs/*.jar"
+          source: "build/libs/minimal-prod-backend-0.0.1-SNAPSHOT.jar"
+
           target: "/home/ubuntu/app/app.jar"
 
       - name: Restart service
