--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,8 +33,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "build/libs/app.jar"
-
-          target: "/home/ubuntu/app/app.jar"
+          target: "/home/ubuntu/app/"
 
       - name: Restart service
         uses: appleboy/ssh-action@v0.1.7
