--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,8 @@ jobs:
 
       - name: Build JAR with Gradle
         run: ./gradlew build -x test
+      - name: Check JAR exists
+        run: ls -lh build/libs/app.jar
 
       - name: Copy JAR to EC2
         uses: appleboy/scp-action@v0.1.7
@@ -33,7 +35,7 @@ jobs:
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "build/libs/app.jar"
-          target: "/home/ubuntu/app/"
+          target: "/home/ubuntu/app/app.jar"
 
       - name: Restart service
         uses: appleboy/ssh-action@v0.1.7
