--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,10 @@ jobs:
           host: ${{ secrets.EC2_HOST }}
           username: ubuntu
           key: ${{ secrets.EC2_SSH_KEY }}
-          source: "build/libs/app.jar"
+          source: "./build/libs/app.jar"
           target: "/home/ubuntu/app/"
+          strip_components: 3
+
 
       - name: Restart service
         uses: appleboy/ssh-action@v0.1.7
