--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ jwt.secret=ac9c8a7b2dc5c9bdc3a7fed6888d3c3f
 jwt.expiration-ms=3600000
 
 # --- Database ---
-spring.datasource.url=jdbc:postgresql://localhost:5432/minimalProd
+spring.datasource.url=jdbc:postgresql://localhost:5432/minimalprod
 spring.datasource.username=minimal_prod_user
 spring.datasource.password=minimal_prod_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
