--- a/application.yml
+++ b/application.yml
@@ -4,7 +4,7 @@ spring:
       max-file-size: 10MB
       max-request-size: 20MB
   datasource:
-    url: jdbc:postgresql://localhost:5432/minimalProd
+    url: jdbc:postgresql://localhost:5432/minimalprod
     username: minimal_prod_user
     password: minimal_prod_pass
 
