--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,5 +81,5 @@ spring.output.ansi.enabled=always
 # Patrón de log más limpio
 logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %-5level - %logger{36} - %msg%n
 # Logs específicos para debug
-
+# application.properties
 # Para ver las consultas de las entidades relacionadas
