--- a/application.yml
+++ b/application.yml
@@ -7,6 +7,11 @@ spring:
     url: jdbc:postgresql://localhost:5432/minimalprod
     username: minimal_prod_user
     password: minimal_prod_pass
+    hikari:
+      max-lifetime: 1800000
+      idle-timeout: 600000
+      maximum-pool-size: 10
+      connection-timeout: 30000
 
   jpa:
     hibernate:
