--- a/application.yml
+++ b/application.yml
@@ -8,25 +8,16 @@ spring:
     username: minimal_prod_user
     password: minimal_prod_pass
     hikari:
-      max-lifetime: 1800000
-      idle-timeout: 600000
-      keepalive-time: 300000
-      maximum-pool-size: 10
       connection-timeout: 30000
-
   jpa:
     hibernate:
       ddl-auto: none
-
     properties:
       hibernate:
-        #dialect: org.company.configuration.CustomPostgreSQLDialect
-        temp:
-          use_jdbc_metadata_defaults: false
+        format_sql: true
         id:
           identifier_generator: Tsid
     show-sql: true
-
 
   graphql:
     execution:
@@ -44,7 +35,7 @@ flyway:
   locations: classpath:db/migration
 cloudflare:
   r2:
-    endpoint: https://bucked.minimalprod.space/
+    endpoint: http://localhost:9000
     access-key: admin
     secret-key: password123
     bucket: demos
