añadir especificacion de no leido

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,10 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/minimalprod
 spring.datasource.username=minimal_prod_user
 spring.datasource.password=minimal_prod_pass
 spring.datasource.driver-class-name=org.postgresql.Driver
-
+# Reemplaza con tus valores reales
+r2.accessKeyId=admin
+r2.secretKey=password123
+r2.endpoint=https://bucked.minimalprod.space
 
 # --- Logging: NIVELES REDUCIDOS Y ENFOCADOS ---
 logging.level.root=DEBUG
